[package]
name = "jetstream-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["tokio-rustls"] }
local-ip-address = "0.6.5"
enigo = { version = "0.5.0", features = ["wayland"] }
once_cell = "1.21.3"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
